--- a/index.html
+++ b/index.html
@@ -3411,7 +3411,7 @@
     });
 
     $(document).on("click", "li", function () {
-      tokenImage = $(this).data('image');
+     /* tokenImage = $(this).data('image');
       console.log(tokenImage)
       $(".verify-token").empty();
       $("#verify-" + $(this).attr('id')).append('<form id="verify-token-form" class="form-inline">\
@@ -3421,7 +3421,7 @@
   </div>\
   <div class="col-auto"><button type="submit" class="btn btn-primary mb-2">Verify</button></div>\
 </form>')
-      return;
+      return;*/
 
       if ($(this).hasClass("gamers-nft-item")) {
         startLoading();
