--- a/twitch/index.html
+++ b/twitch/index.html
@@ -185,7 +185,8 @@
                                         <div class="panel-body">
                                             <div class="flex-shrink-0 text-center">
                                                 <p class="game-icon">
-                                                    Your request has been sent to the blockchain. The NFT will be arriving to your wallet shortly!<br><br>
+                                                    Your request has been sent to the blockchain. The NFT will be
+                                                    arriving to your wallet shortly!<br><br>
                                                     Thank you for using PlayNFT
                                                 </p>
 
@@ -308,7 +309,7 @@
                                         second: 'numeric', // numeric, 2-digit
                                     })
 
-                                    if(item.claimed == 1) item.supply = 0;
+                                    if (item.claimed == 1) item.supply = 0;
 
                                     let game_content = { id: item.id, transactionId: item.transactionId, name: item.name, date: dateString, streamer: item.streamer, streamerId: item.streamerId, supply: item.supply };
                                     $("#twitch-nfts-template")
@@ -328,6 +329,16 @@
                 });
             }
         }
+
+        //Wizard
+        $('a[data-bs-toggle="tab"]').on("show.bs.tab", function (e) {
+            var $target = $(e.target);
+
+            if ($target.parent().hasClass("disabled")) {
+                console.log($target.parent());
+                return false;
+            }
+        });
     });
 
     $(document).on("click", "#login-twitch", function () {
