--- a/twitch/index.html
+++ b/twitch/index.html
@@ -54,13 +54,13 @@
     <!-- ======= Header ======= -->
     <header id="header" class="header fixed-top">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-            <a href="../index.html" class="logo d-flex align-items-center">
+            <a href="../" class="logo d-flex align-items-center">
                 <img src="../assets/img/logo.png" alt="PlayNFT" />
             </a>
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="../index.html">Home</a></li>
+                    <li><a class="nav-link scrollto active" href="../">Home</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
